share/cascade/test/regression/type_check/fail/instantiation_5.v
// Duplicate instantiations 

module foo();
endmodule

foo f();
foo f();

initial $finish;
